--- a/Lesson1.html
+++ b/Lesson1.html
@@ -27,7 +27,7 @@
                                                               
 
 </li>
-                    <li>2021 – 2021  <b> "Slepko High Private School" </b>                
+                    <li>2021 – now <b> "Slepko High Private School" </b>                
                         <p><div><b>Qualification:</b> <i>Web developer</i></div>
                         <div><b>Diploma:</b>  <i>IT-engineer</i></div> </p>
 </li>
